--- a/index.html
+++ b/index.html
@@ -3,24 +3,19 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Tales & Titles</title>
+		<title>Document</title>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
 			crossorigin="anonymous"
 		/>
-		<link
-			rel="stylesheet"
-			href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"
-		/>
-		<link rel="stylesheet" href="./css/style.css" />
 	</head>
 	<body>
 		<header>
 			<nav class="navbar navbar-expand-lg bg-body-tertiary">
 				<div class="container-fluid">
-					<a class="navbar-brand" href="#">Navbar</a>
+					<div class="navbar-brand"><img src="./assets/5.jpg" alt="" /></div>
 					<button
 						class="navbar-toggler"
 						type="button"
@@ -35,16 +30,13 @@
 					<div class="collapse navbar-collapse" id="navbarNav">
 						<ul class="navbar-nav">
 							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="#">Home</a>
+								<a class="nav-link" href="#">HOME</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Bookstores</a>
+								<a class="nav-link" href="#">BOOKS</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">Pricing</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link disabled" aria-disabled="true">Disabled</a>
+								<a class="nav-link">BOOK STORE</a>
 							</li>
 						</ul>
 					</div>
@@ -56,19 +48,13 @@
 				<div id="carouselExample" class="carousel slide">
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img
-								src=""
-								class="d-block w-100"
-								alt="New York Times Best Seller"
-							/>
+							<img src="..." class="d-block w-100" alt="..." />
 						</div>
 						<div class="carousel-item">
-							<img src="" class="d-block w-100" alt="New York Times Best
-							Seller"" />
+							<img src="..." class="d-block w-100" alt="..." />
 						</div>
 						<div class="carousel-item">
-							<img src="" class="d-block w-100" alt="New York Times Best
-							Seller"" />
+							<img src="..." class="d-block w-100" alt="..." />
 						</div>
 					</div>
 					<button
@@ -86,10 +72,7 @@
 						data-bs-target="#carouselExample"
 						data-bs-slide="next"
 					>
-						<!-- <span class="carousel-control-next-icon" aria-hidden="true"></span> -->
-						<span class="carousel-control-next-icon" aria-hidden="true"
-							><i class="fas fa-arrow-alt-circle-right your-icon-class"></i
-						></span>
+						<span class="carousel-control-next-icon" aria-hidden="true"></span>
 						<span class="visually-hidden">Next</span>
 					</button>
 				</div>
@@ -112,7 +95,5 @@
 			integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
 			crossorigin="anonymous"
 		></script>
-		<script src="https://code.jquery.com/jquery.js"></script>
-		<script src="./js/script.js"></script>
 	</body>
 </html>
