--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
 			crossorigin="anonymous"
 		/>
+		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
 		<header>
@@ -36,7 +37,7 @@
 								<a class="nav-link" href="#">BOOKS</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link">BOOK STORE</a>
+								<a class="nav-link" href="#">BOOK STORE</a>
 							</li>
 						</ul>
 					</div>
@@ -48,13 +49,13 @@
 				<div id="carouselExample" class="carousel slide">
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img src="..." class="d-block w-100" alt="..." />
+							<img src="" class="d-block w-100" alt="..." />
 						</div>
 						<div class="carousel-item">
-							<img src="..." class="d-block w-100" alt="..." />
+							<img src="" class="d-block w-100" alt="..." />
 						</div>
 						<div class="carousel-item">
-							<img src="..." class="d-block w-100" alt="..." />
+							<img src="" class="d-block w-100" alt="..." />
 						</div>
 					</div>
 					<button
@@ -95,5 +96,7 @@
 			integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
 			crossorigin="anonymous"
 		></script>
+		<script src="https://code.jquery.com/jquery.js"></script>
+		<script src="./js/script.js"></script>
 	</body>
 </html>
