feat: Add map search functionality

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
 								<a class="nav-link" href="#">HOME</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">BOOKS</a>
+								<a class="nav-link" href="#book-results">BOOKS</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="#">BOOK STORE</a>
+								<a class="nav-link" href="map.html">BOOK STORE</a>
 							</li>
 						</ul>
 					</div>
@@ -115,7 +115,9 @@
 			crossorigin="anonymous"
 		></script>
 		<script src="https://code.jquery.com/jquery.js"></script>
+
 		<script src="./js/script.js"></script>
+		<script src="./js/mapbox.js"></script>
 		<script src="./js/google-api-script.js"></script>
 	</body>
 </html>
