--- a/books.html
+++ b/books.html
@@ -34,7 +34,7 @@
 								<a class="nav-link" href="#">HOME</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="books.html">BOOKS</a>
+								<a class="nav-link" href="#book-results">BOOKS</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="map.html">BOOK STORE</a>
@@ -45,50 +45,6 @@
 			</nav>
 		</header>
 		<main>
-			<section>
-				<div id="carouselExample" class="carousel slide">
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<img src="" class="d-block w-100" alt="..." />
-						</div>
-						<div class="carousel-item">
-							<img src="" class="d-block w-100" alt="..." />
-						</div>
-						<div class="carousel-item">
-							<img src="" class="d-block w-100" alt="..." />
-						</div>
-					</div>
-					<button
-						class="carousel-control-prev"
-						type="button"
-						data-bs-target="#carouselExample"
-						data-bs-slide="prev"
-					>
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="visually-hidden">Previous</span>
-					</button>
-					<button
-						class="carousel-control-next"
-						type="button"
-						data-bs-target="#carouselExample"
-						data-bs-slide="next"
-					>
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="visually-hidden">Next</span>
-					</button>
-				</div>
-			</section>
-			<!-- <section>
-				<div class="input-group input-group-lg">
-					<span class="input-group-text" id="inputGroup-sizing-lg">Large</span>
-					<input
-						type="text"
-						class="form-control"
-						aria-label="Sizing example input"
-						aria-describedby="inputGroup-sizing-lg"
-					/>
-				</div>
-			</section> -->
 			<section>
 				<form id="book-search-form" class="input-group input-group-lg">
 					<span class="input-group-text" id="inputGroup-sizing-lg"
