--- a/books.html
+++ b/books.html
@@ -3,17 +3,58 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Tales & Titles</title>
 		<link
 			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
 			rel="stylesheet"
 			integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
 			crossorigin="anonymous"
 		/>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
+    </script>
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/style.css" />
 	</head>
 	<body>
-		<header>
+		<div>
+			<header role="banner">
+			  <img
+				id="logo-main"
+				src="./assets/5.jpg"
+				width="300"
+				alt="Logo Thing main logo"
+			  />
+			  <nav
+				id="navbar-primary"
+				class="navbar navbar-default"
+				role="navigation"
+			  >
+				<div class="container-fluid">
+				  <!-- Brand and toggle get grouped for better mobile display -->
+				  <div class="navbar-header">
+					<button
+					  type="button"
+					  class="navbar-toggle"
+					  data-toggle="collapse"
+					  data-target="#navbar-primary-collapse"
+					>
+					  <span class="sr-only">Toggle navigation</span>
+					  <span class="icon-bar"></span>
+					  <span class="icon-bar"></span>
+					  <span class="icon-bar"></span>
+					</button>
+				  </div>
+				  <div class="collapse navbar-collapse" id="navbar-primary-collapse">
+					<ul class="nav navbar-nav">
+					  <li class="active"><a href="index.html">Home</a></li>
+					  <!-- <li><a href="#">Link</a></li> -->
+					  <li><a href="books.html">Books</a></li>
+					  <li><a href="map.html">Bookstores</a></li>
+					  <!-- <li><a href="#">Link</a></li> -->
+					</ul>
+				  </div>
+				  <!-- /.navbar-collapse -->
+		<!-- <header>
 			<nav class="navbar navbar-expand-lg bg-body-tertiary">
 				<div class="container-fluid">
 					<div class="navbar-brand"><img src="./assets/5.jpg" alt="" /></div>
@@ -43,7 +84,7 @@
 					</div>
 				</div>
 			</nav>
-		</header>
+		</header> -->
 		<main>
 			<section>
 				<form id="book-search-form" class="input-group input-group-lg">
