--- a/map.html
+++ b/map.html
@@ -62,7 +62,7 @@
 								<a class="nav-link" href="index.html">HOME</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link" href="index.html">BOOKS</a>
+								<a class="nav-link" href="index.html">BOOK Search</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link" href="map.html">BOOK STORE</a>
