--- a/books.html
+++ b/books.html
@@ -48,7 +48,7 @@
 					<ul class="nav navbar-nav">
 					  <li class="active"><a href="index.html">Home</a></li>
 					  <!-- <li><a href="#">Link</a></li> -->
-					  <li><a href="books.html">Books</a></li>
+					  <li><a href="books.html">Book Search</a></li>
 					  <li><a href="map.html">Bookstores</a></li>
 					  <!-- <li><a href="#">Link</a></li> -->
 					</ul>
