--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       rel="stylesheet"
       href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"
     />
+	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
   </head>
@@ -136,7 +137,6 @@
 				<div id="book-results"></div>
 			</section>
 
-			<footer>text for the footer</footer>
 		</main>
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
@@ -148,5 +148,21 @@
 		<script src="./js/script.js"></script>
 		<script src="./js/mapbox.js"></script>
 		<script src="./js/google-api-script.js"></script>
+		<!-- footer section -->
+		<footer>
+			<div class="social"><a href="#"><i class="fa-brands fa-github fa-beat-fade fa-2xs" style="color: #ded8c4;"></i></div>
+            <ul class="list-inline">
+                <li class="list-inline-item"><a href="#">Home</a></li>
+                <li class="list-inline-item"><a href="#">Services</a></li>
+                <li class="list-inline-item"><a href="#">About</a></li>
+                <li class="list-inline-item"><a href="#">Terms</a></li>
+                <li class="list-inline-item"><a href="#">Privacy Policy</a></li>
+            </ul>
+            <p class="copyright">Tales & Titles © 2023</p>
+        </footer>
+    </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+		</footer>
 	</body>
 </html>
