--- a/books.html
+++ b/books.html
@@ -7,128 +7,122 @@
 	<title>Tales & Titles</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous" />
+		<link
+			rel="stylesheet"
+			href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.0/font/bootstrap-icons.css"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+		/>
 
 	<link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-	<div>
-		<header role="banner">
-			<img id="logo-main" src="./assets/5.jpg" width="300" alt="Logo Thing main logo" />
-			<nav id="navbar-primary" class="navbar navbar-default" role="navigation">
-				<div class="container-fluid">
-				  <!-- Brand and toggle get grouped for better mobile display -->
-				  <div class="navbar-header">
-					<button
-					  type="button"
-					  class="navbar-toggle"
-					  data-toggle="collapse"
-					  data-target="#navbar-primary-collapse"
-					>
-					  <span class="sr-only">Toggle navigation</span>
-					  <span class="icon-bar"></span>
-					  <span class="icon-bar"></span>
-					  <span class="icon-bar"></span>
-					</button>
-				  </div>
-				  <div class="collapse navbar-collapse" id="navbar-primary-collapse">
-					<ul class="nav navbar-nav">
-					  <li class="active"><a href="index.html">Home</a></li>
-					  <!-- <li><a href="#">Link</a></li> -->
-					  <li><a href="books.html">Book Search</a></li>
-					  <li><a href="map.html">Bookstores</a></li>
-					  <!-- <li><a href="#">Link</a></li> -->
+	<header>
+		<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #88ab8e">
+			<div class="container-fluid">
+				<a class="navbar-brand" href="#">
+					<img id="logo-main" src="./assets/group-logo-z-2.png" width="175" alt="Logo Thing main logo" />
+				</a>
+				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+					aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+					<span class="navbar-toggler-icon"></span>
+				</button>
+				<div class="collapse navbar-collapse" id="navbarNav">
+					<ul class="navbar-nav ms-auto">
+						<li class="nav-item">
+							<a class="nav-link active" aria-current="page" href="index.html">Home</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="books.html">Book Search</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link" href="map.html">Book Stores</a>
+						</li>
 					</ul>
-				  </div>
-				  <!-- /.navbar-collapse -->
-		<!-- <header>
-			<nav class="navbar navbar-expand-lg bg-body-tertiary">
-				<div class="container-fluid">
-					<div class="navbar-brand"><img src="./assets/5.jpg" alt="" /></div>
-					<button
-						class="navbar-toggler"
-						type="button"
-						data-bs-toggle="collapse"
-						data-bs-target="#navbarNav"
-						aria-controls="navbarNav"
-						aria-expanded="false"
-						aria-label="Toggle navigation"
-					>
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse" id="navbarNav">
-						<ul class="navbar-nav">
-							<li class="nav-item">
-								<a class="nav-link" href="#">HOME</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="#book-results">BOOKS</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="map.html">BOOK STORE</a>
-							</li>
-						</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+	<main>
+		<section>
+			<form id="book-search-form" class="input-group input-group-lg">
+				<span class="input-group-text" id="inputGroup-sizing-lg">Search for you favorite
+					books</span>
+				<input type="text" class="form-control" id="search-term" aria-label="Sizing example input"
+					aria-describedby="inputGroup-sizing-lg" placeholder="Enter book title, author, or genre" />
+				<button class="btn btn-primary " type="submit">Search</button>
+			</form>
+			<div id="book-results"></div>
+		</section>
+		<section>
+
+
+			<!-- Bootstrap Modal -->
+			<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable"></div>
+			<div class="modal fade" id="bookModal" aria-labelledby="bookModalLabel" aria-hidden="true">
+				<div class="modal-dialog">
+					<div class="modal-content">
+						<div class="modal-header">
+							<h5 class="modal-title" id="bookModalLabel">Modal title</h5>
+							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+						</div>
+						<div class="modal-body">
+							<img id="bookImage" src="" alt="Book Image" style="max-width: 100%; height: auto;">
+							<h5 id="bookAuthor">Author: </h5>
+							<p id="bookRating">Rating: </p>
+							<p id="releaseDate">Release Date: </p>
+							<p id="category">Category: </p>
+							<p id="pageCount">Page Count: </p>
+							<p id="publisher">Publisher: </p>
+							<p id="bookDescription">Description: </p>
+
+						</div>
+						<div class="modal-footer">
+							<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+						</div>
 					</div>
 				</div>
-			</nav>
-		</header> -->
-					<main>
-						<section>
-							<form id="book-search-form" class="input-group input-group-lg">
-								<span class="input-group-text" id="inputGroup-sizing-lg">Search for you favorite
-									books</span>
-								<input type="text" class="form-control" id="search-term"
-									aria-label="Sizing example input" aria-describedby="inputGroup-sizing-lg"
-									placeholder="Enter book title, author, or genre" />
-								<button class="btn btn-primary" type="submit">Search</button>
-							</form>
-							<div id="book-results"></div>
-						</section>
-						<section>
-
-
-							<!-- Bootstrap Modal -->
-							<div class="modal-dialog modal-dialog-centered modal-dialog-scrollable"></div>
-							<div class="modal fade" id="bookModal" aria-labelledby="bookModalLabel" aria-hidden="true">
-								<div class="modal-dialog">
-									<div class="modal-content">
-										<div class="modal-header">
-											<h5 class="modal-title" id="bookModalLabel">Modal title</h5>
-											<button type="button" class="btn-close" data-bs-dismiss="modal"
-												aria-label="Close"></button>
-										</div>
-										<div class="modal-body">
-											<img id="bookImage" src="" alt="Book Image"
-												style="max-width: 100%; height: auto;">
-											<h5 id="bookAuthor">Author: </h5>
-											<p id="bookRating">Rating: </p>
-											<p id="releaseDate">Release Date: </p>
-											<p id="category">Category: </p>
-											<p id="pageCount">Page Count: </p>
-											<p id="publisher">Publisher: </p>
-											<p id="bookDescription">Description: </p>
-
-										</div>
-										<div class="modal-footer">
-											<button type="button" class="btn btn-secondary"
-												data-bs-dismiss="modal">Close</button>
-										</div>
-									</div>
-								</div>
-							</div>
-				</div>
+			</div>
+			</div>
+		</section>
+		<footer class="text-center text-lg-start text-white" style="background-color: #88ab8e">
+			<div class="container p-4 pb-0">
+				<section class="container-fluid mb-4 text-center">
+					<p class="d-flex justify-content-center align-items-center">
+						<span class="me-3">Search for your favorite books</span>
+						<button type="button" class="btn btn-outline-light btn-rounded me-3">
+							<a class="nav-link" href="books.html">Book Search</a>
+						</button>
+		
+						<a class="btn btn-outline-light btn-floating m-1 me-3" href="#!" role="button">
+							<i class="fa fa-external-link"></i>
+						</a>
+		
+						<a class="btn btn-outline-light btn-floating m-1" href="#!" role="button">
+							<i class="fab fa-github"></i>
+						</a>
+					</p>
 				</section>
+			</div>
+			<div class="text-center p-3" style="background-color: #739072">
+				<span id="current-year"></span> © Marcia. All Rights Reserved.
+			</div>
+		</footer>
+	</main>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
+		integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
+		crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery.js"></script>
 
-				<footer>text for the footer</footer>
-				</main>
-				<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.min.js"
-					integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
-					crossorigin="anonymous"></script>
-				<script src="https://code.jquery.com/jquery.js"></script>
-
-				<script src="./js/script.js"></script>
-				<script src="./js/mapbox.js"></script>
-				<script src="./js/google-api-script.js"></script>
+	<script src="./js/script.js"></script>
+	<script src="./js/mapbox.js"></script>
+	<script src="./js/google-api-script.js"></script>
+	<script>
+		$('#current-year').text(new Date().getFullYear());
+	</script>
 </body>
 
 </html>
