--- a/index.html
+++ b/index.html
@@ -25,82 +25,105 @@
     
   </head>
   <body>
-    <div>
-      <header role="banner">
+	<div id="mainNavigation">
+		<nav role="navigation">
+		  <div class="py-3 text-center border-bottom">
         <img
-          id="logo-main"
           src="./assets/5.jpg"
           width="300"
-          alt="Logo Thing main logo"
+          alt="Logo" 
+		  class="invert"
         />
-        <nav
-          id="navbar-primary"
-          class="navbar navbar-default"
-          role="navigation"
-        >
-          <div class="container-fluid">
-            <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
-              <button
-                type="button"
-                class="navbar-toggle"
-                data-toggle="collapse"
-                data-target="#navbar-primary-collapse"
-              >
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-              </button>
-            </div>
-            <div class="collapse navbar-collapse" id="navbar-primary-collapse">
-              <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-                <li><a href="#">Link</a></li>
-              </ul>
-            </div>
-            <!-- /.navbar-collapse -->
-          </div>
-          <!-- /.container-fluid -->
-        </nav>
-      </header>
+		<div class="navbar-expand-md">
+			<div class="navbar-dark text-center my-2">
+			  <button class="navbar-toggler w-75" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span> <span class="align-middle">Menu</span>
+			  </button>
+			</div>
+			<div class="text-center mt-3 collapse navbar-collapse" id="navbarNavDropdown">
+			  <ul class="navbar-nav mx-auto ">
+				<li class="nav-item">
+				  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="books.html">Books</a>
+				</li>
+				<li class="nav-item">
+				  <a class="nav-link" href="map.html">Book Stores</a>
+				</li>
+				<li class="nav-item">
+				<a class="nav-link" href="about.html">About Us</a>
+			</li>
+			<li class="nav-item">
+				<a class="nav-link" href="contact.html">Contact</a>
+			</li>
+			 </ul>
+			</div>
+		  </div>
+		</div>
+		  </header><!-- header role="banner" -->
       <!-- header role="banner" -->
 		<main>
 			<section>
-				<div id="carouselExample" class="carousel slide">
-					<div class="carousel-inner">
-						<div class="carousel-item active">
-							<img src="" class="d-block w-100" alt="..." />
-						</div>
-						<div class="carousel-item">
-							<img src="" class="d-block w-100" alt="..." />
-						</div>
-						<div class="carousel-item">
-							<img src="" class="d-block w-100" alt="..." />
-						</div>
-					</div>
-					<button
-						class="carousel-control-prev"
-						type="button"
-						data-bs-target="#carouselExample"
-						data-bs-slide="prev"
-					>
-						<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-						<span class="visually-hidden">Previous</span>
-					</button>
-					<button
-						class="carousel-control-next"
-						type="button"
-						data-bs-target="#carouselExample"
-						data-bs-slide="next"
-					>
-						<span class="carousel-control-next-icon" aria-hidden="true"></span>
-						<span class="visually-hidden">Next</span>
-					</button>
-				</div>
+				<!-- Page Wrap -->
+<div class="page-wrap">
+
+	<div id="home-slider">
+	  <div class="swiper-container">
+		<div class="swiper-wrapper">
+		  <div class="swiper-slide swiper-slide-one">
+			<div class="swiper-image" data-swiper-parallax-y="-20%">
+			  <div class="swiper-image-inner swiper-image-left swiper-image-one">
+				<h1>A <span class="emphasis">Breath</span>. <br><span>Of Fresh Air.</span></h1>
+				<p>Chapter I, page XV</p>
+			  </div>
+			</div>
+			<div class="swiper-image" data-swiper-parallax-y="35%">
+			  <div class="swiper-image-inner swiper-image-right swiper-image-two">
+				<p class="paragraph">
+				  A Prophet sat in the market-place and told the fortunes of all who cared to engage his services. Suddenly there came running up one who told him that his house had been broken into by thieves, and that they had made off with everything they could lay
+				  hands on.
+				</p>
+			  </div>
+			</div>
+		  </div>
+		  <div class="swiper-slide swiper-slide-two">
+			<div class="swiper-image" data-swiper-parallax-y="-20%">
+			  <div class="swiper-image-inner swiper-image-left swiper-image-three">
+				<h1>The <span class="emphasis">Drop</span>. <br><span>Of Eternal life.</span></h1>
+				<p>Chapter II, page VII</p>
+			  </div>
+			</div>
+			<div class="swiper-image" data-swiper-parallax-y="35%">
+			  <div class="swiper-image-inner swiper-image-right swiper-image-four">
+				<p class="paragraph">
+				  A thirsty Crow found a Pitcher with some water in it, but so little was there that, try as she might, she could not reach it with her beak, and it seemed as though she would die of thirst within sight of the remedy.
+				</p>
+			  </div>
+			</div>
+		  </div>
+		  <div class="swiper-slide swiper-slide-three">
+			<div class="swiper-image" data-swiper-parallax-y="-20%">
+			  <div class="swiper-image-inner swiper-image-left swiper-image-five">
+				<h1>A <span class="emphasis">Sense</span>. <br><span>Of Things to Come.</span></h1>
+				<p>Chapter III, page XI</p>
+			  </div>
+			</div>
+			<div class="swiper-image" data-swiper-parallax-y="35%">
+			  <div class="swiper-image-inner swiper-image-right swiper-image-six">
+				<p class="paragraph">
+				  Every man carries Two Bags about with him, one in front and one behind, and both are packed full of faults. The Bag in front contains his neighbours’ faults, the one behind his own. Hence it is that men do not see their own faults, but never fail to see
+				  those of others.
+				</p>
+			  </div>
+			</div>
+		  </div>
+  
+		</div>
+		<div class="swiper-pagination"></div>
+	  </div>
+	</div>
+  </div>
 			</section>
 			<!-- <section>
 				<div class="input-group input-group-lg">
@@ -138,7 +161,9 @@
 							</div>
 							<div class="col-md-6 item text">
 								<h3>Tales & Titles</h3>
-								<p>Praesent sed lobortis mi. Suspendisse vel placerat ligula. Vivamus ac sem lacus. Ut vehicula rhoncus elementum. Etiam quis tristique lectus. Aliquam in arcu eget velit pulvinar dictum vel in justo.</p>
+								<p>
+									Embark on a personalized literary journey with Tales and Titles, your trusted companion for tailored book recommendations. Born from a love of storytelling, our online haven connects readers with the perfect read, carefully curated by our team of book enthusiasts. Whether you're a seasoned reader or a novice, let Tales and Titles guide you through the enchanting world of stories, where each tale has its unique title waiting to be explored. Happy reading!
+								</p>
 							</div>
 							<div class="col item social"><a href="https://github.com/najmamusa/Group-Project-1" target="_blank"><i class="fa-brands fa-github"></i></a></div>
 						</div>
