--- a/map.html
+++ b/map.html
@@ -43,36 +43,51 @@
 	</head>
 	<body>
 		<header>
-			<nav class="navbar navbar-expand-lg bg-body-tertiary">
-				<div class="container-fluid">
-					<!-- <div class="navbar-brand"><img src="./assets/5.jpg" alt="" /></div> -->
-					<button
-						class="navbar-toggler"
-						type="button"
-						data-bs-toggle="collapse"
-						data-bs-target="#navbarNav"
-						aria-controls="navbarNav"
-						aria-expanded="false"
-						aria-label="Toggle navigation"
-					>
-						<span class="navbar-toggler-icon"></span>
-					</button>
-					<div class="collapse navbar-collapse" id="navbarNav">
-						<ul class="navbar-nav">
-							<li class="nav-item">
-								<a class="nav-link" href="index.html">HOME</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="index.html">BOOK Search</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link" href="map.html">BOOK STORE</a>
-							</li>
-						</ul>
+			<div id="mainNavigation">
+				<nav role="navigation">
+				  <div class="py-3 text-center border-bottom">
+				<img
+				  src="./assets/5.jpg"
+				  width="300"
+				  alt="Logo" 
+				  class="invert"
+				/>
+				<div class="navbar-expand-md">
+					<div class="navbar-dark text-center my-2">
+					  <button class="navbar-toggler w-75" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+						<span class="navbar-toggler-icon"></span> <span class="align-middle">Menu</span>
+					  </button>
 					</div>
+					<div class="text-center mt-3 collapse navbar-collapse" id="navbarNavDropdown">
+					  <ul class="navbar-nav mx-auto ">
+						<li class="nav-item">
+						  <a class="nav-link active" aria-current="page" href="index.html">Home</a>
+						</li>
+						<li class="nav-item">
+						  <a class="nav-link" href="books.html">Books</a>
+						</li>
+						<li class="nav-item">
+						  <a class="nav-link" href="map.html">Book Stores</a>
+						</li>
+						<li class="nav-item">
+						  <a class="nav-link" href="#">Policy</a>
+						</li>
+						<li class="nav-item dropdown">
+						  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+							Company
+						  </a>
+						  <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+							<li><a class="dropdown-item" href="#">Blog</a></li>
+							<li><a class="dropdown-item" href="#">About Us</a></li>
+							<li><a class="dropdown-item" href="#">Contact us</a></li>
+						  </ul>
+						</li>
+					  </ul>
+					</div>
+				  </div>
 				</div>
-			</nav>
-		</header>
+				  </header><!-- header role="banner" -->
+			  <!-- header role="banner" ->
 		<!-- <div
 			class="modal fade"
 			id="placeModal"
