feat: Add updated code

--- a/books.html
+++ b/books.html
@@ -56,6 +56,7 @@
 				<button class="btn btn-primary " type="submit">Search</button>
 			</form>
 			<div id="book-results"></div>
+			
 		</section>
 		<section>
 
@@ -70,7 +71,7 @@
 							<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
 						</div>
 						<div class="modal-body">
-							<img id="bookImage" src="" alt="Book Image" style="max-width: 100%; height: auto;">
+							<img id="bookImage" src="" alt="Book Image"">
 							<h5 id="bookAuthor">Author: </h5>
 							<p id="bookRating">Rating: </p>
 							<p id="releaseDate">Release Date: </p>
@@ -116,9 +117,6 @@
 		integrity="sha384-Y4oOpwW3duJdCWv5ly8SCFYWqFDsfob/3GkgExXKV4idmbt98QcxXYs9UoXAB7BZ"
 		crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery.js"></script>
-
-	<script src="./js/script.js"></script>
-	<script src="./js/mapbox.js"></script>
 	<script src="./js/google-api-script.js"></script>
 	<script>
 		$('#current-year').text(new Date().getFullYear());
