feat: Add code cleanup and better ui, ux

--- a/map.html
+++ b/map.html
@@ -90,7 +90,10 @@
 				</div>
 				<div class="col-md-4">
 					<div class="container">
-						<h3>Bookstore and Libraries near you</h3>
+						<h3>
+							<span class="colour-span">Bookshops and Local</span> Libraries in
+							Your Area
+						</h3>
 						<div id="place-search-results"></div>
 					</div>
 				</div>
@@ -130,7 +133,7 @@
 				</section>
 			</div>
 			<div class="text-center p-3" style="background-color: #739072">
-				<span id="current-year"></span> © Marcia. All Rights Reserved.
+				<span id="current-year"></span> © Tales & Titles. All Rights Reserved.
 			</div>
 		</footer>
 
