--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
 							class="container-fluid d-flex justify-content-center align-items-center"
 						>
 							<h1 class="text-center">
-								<span class="new-york-times">New Year Times</span> Bestseller
-								List
+								<span class="colour-span">New Year Times</span> Bestseller List
 							</h1>
 						</div>
 						<div id="carouselExample" class="carousel slide mt-3 mb-3">
@@ -163,7 +162,8 @@
 						</section>
 					</div>
 					<div class="text-center p-3" style="background-color: #739072">
-						<span id="current-year"></span> © Marcia. All Rights Reserved.
+						<span id="current-year"></span> © Tales & Titles. All Rights
+						Reserved.
 					</div>
 				</footer>
 				<!-- === ./ FOOTER ===-->
@@ -173,7 +173,7 @@
 					crossorigin="anonymous"
 				></script>
 				<script src="https://code.jquery.com/jquery.js"></script>
-
+				<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 				<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
 
